--- a/danmu/danmu.html
+++ b/danmu/danmu.html
@@ -1,90 +1,35 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>弹幕</title>
-	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs
-/jquery/1.4.0/jquery.min.js"></script>
-	<script type="text/javascript" src="contentShow.js"></script>
-	<style>
-	.danmu {
-			margin:2rem;
-			background-color:#eee;
-			height:400px;
-			border:2px solid #999;
-		}
-	form {
-		margin:1rem auto;
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>弹幕</title>
+  <style type="text/css">
+  	#showTable {
+  margin: 0 auto;
+  width:95%;
+  height:300px;
+  border:1px solid #000;
+}
 
-	}
-	
-	</style>
+div span {
+  position:absolute;
+}
+
+div {
+  text-align:center;
+  margin-top:2em;
+}
+  </style>
 </head>
-<body>	
-	<div class="container-fluid">
-		<div class="row">
-			<div id="contentShow" class=" danmu text-center" ></div>
-		</div>
-		<div class = "row">
-			<div class="form-group">
-			<form>
-			<div class="col-md-10 col-xs-10 col-md-offset-1 col-xs-offset-1">
-				<input type="text" class="form-control col-md-10" placeholder="想说什么" />
-			<button id="btn1" type="button" class="btn btn-primary col-md-5 col-xs-5 col-md-offset-1 col-xs-offset-1">输入弹幕</button>
-			<button type="button" class="btn btn-warning col-md-5 col-xs-5 ">清屏</button>
-		</div>
-
-
-		</form>
-		</div>
-	</div>
-	</div>
+<body>
+  <div id="showTable"></div>
+  <div id="control">
+  <input id="inputText" type="text" placeholder="发点什么？"/>
+  <button id="clearText">清屏</button>
+  <button id="addText">发射！</button>
+  </div>
+  <script src="https://s3.ssl.qhres.com/!ed7dc4fe/animator-0.3.2.js"></script>
+  <script type="text/javascript" src="danmu.js"></script>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-	<meta charset="UTF-8">
-	<title>弹幕</title>
-	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs
-/jquery/1.4.0/jquery.min.js"></script>
-	<script type="text/javascript" src="contentShow.js"></script>
-	<style>
-	.danmu {
-			margin:2rem;
-			background-color:#eee;
-			height:400px;
-			border:2px solid #999;
-		}
-	form {
-		margin:1rem auto;
-
-	}
-	
-	</style>
-</head>
-<body>	
-	<div class="container-fluid">
-		<div class="row">
-			<div id="contentShow" class=" danmu text-center" ></div>
-		</div>
-		<div class = "row">
-			<div class="form-group">
-			<form>
-			<div class="col-md-10 col-xs-10 col-md-offset-1 col-xs-offset-1">
-				<input type="text" class="form-control col-md-10" placeholder="想说什么" />
-			<button id="btn1" type="button" class="btn btn-primary col-md-5 col-xs-5 col-md-offset-1 col-xs-offset-1">输入弹幕</button>
-			<button type="button" class="btn btn-warning col-md-5 col-xs-5 ">清屏</button>
-		</div>
-
-
-		</form>
-		</div>
-	</div>
-	</div>
-</body>
->>>>>>> 2178a2083ae2c45c2a6044efaf0ab741aa32c294
 </html>
